--- a/base/css/style.css
+++ b/base/css/style.css
@@ -96,6 +96,11 @@ input[type=date] {
   outline: 0;
 }
 
+video {
+  -o-object-fit: fill;
+     object-fit: fill;
+}
+
 /* 스크롤바 커스텀 */
 body ::-webkit-scrollbar-thumb {
   border-radius: 0.5rem;
@@ -699,14 +704,13 @@ body ::-webkit-scrollbar-track {
   color: #adadad;
   font-size: 1.4rem;
 }
-.ui.breadcrumb .section,
-.ui.breadcrumb .section.active {
+.ui.breadcrumb .section {
   color: #adadad;
   font-weight: 400;
 }
-.ui.breadcrumb .section.is-active {
-  font-weight: 700;
+.ui.breadcrumb .section.active {
   color: #03a0fc;
+  font-weight: 700;
 }
 .ui.input {
   width: 100%;
@@ -967,6 +971,22 @@ body ::-webkit-scrollbar-track {
 }
 .ui.primary-chkbox.txt-none label {
   font-size: 0;
+}
+.ui.primary-chkbox.md {
+  min-width: 1.8rem;
+  min-height: 1.8rem;
+  line-height: 1.8rem;
+}
+.ui.primary-chkbox.md label {
+  padding-left: 2.6rem;
+  font-size: 1.8rem;
+  color: #727272;
+}
+.ui.primary-chkbox.md label::before,
+.ui.primary-chkbox.md label::after,
+.ui.primary-chkbox.md input[type=checkbox] {
+  width: 1.8rem;
+  height: 1.8rem;
 }
 .ui.primary-chkbox.xs {
   min-width: 1.1rem;
@@ -1757,20 +1777,27 @@ body ::-webkit-scrollbar-track {
 }
 .ui.dropdown.area-box > .text {
   line-height: 1.9rem;
+  color: #727272 !important;
 }
 .ui.dropdown.area-box .menu {
-  width: auto;
+  width: 100%;
   min-width: auto;
-  max-height: 30rem !important;
+  max-height: none !important;
   margin: 0;
   border-radius: 0.5rem;
 }
-.ui.dropdown.area-box .menu.visible {
-  width: 100%;
+.ui.dropdown.area-box .menu .inner {
+  overflow-y: auto;
+  max-height: 24.64rem;
+}
+.ui.dropdown.area-box .menu .inner::-webkit-scrollbar {
+  width: 0.4rem;
 }
 .ui.dropdown.area-box .menu .item {
+  display: block;
   max-width: 14.4rem;
   padding: 0.8rem !important;
+  text-align: left;
   font-size: inherit;
   overflow: hidden;
   text-overflow: ellipsis;
@@ -3649,8 +3676,8 @@ body ::-webkit-scrollbar-track {
 }
 .sudden-disorder-popup .tab-sudden-list {
   overflow-y: auto;
-  min-height: 14.8rem;
-  max-height: 25rem;
+  min-height: 9.72rem;
+  max-height: 14.8rem;
 }
 .sudden-disorder-popup .tab-sudden-list::-webkit-scrollbar {
   width: 0.4rem;
@@ -3708,6 +3735,27 @@ body ::-webkit-scrollbar-track {
 }
 .sudden-disorder-popup .tab-sudden-list li > .txt em {
   color: #3d3d3d;
+}
+.sudden-disorder-popup .tab-sudden-list li.read {
+  border-color: #f8f8f8;
+  background: #f8f8f8;
+}
+.sudden-disorder-popup .tab-sudden-list li.read .txt span,
+.sudden-disorder-popup .tab-sudden-list li.read .txt em {
+  color: #cbcbcb;
+}
+.sudden-disorder-popup .tab-sudden-list li.read .txt .txt-badge.c-peach {
+  background: #f8f8f8;
+  border: 1px solid #cbcbcb;
+  color: #cbcbcb;
+}
+.sudden-disorder-popup .tab-sudden-list li.read .ui.button.basic.secondary.c-gray-type3 {
+  background: #f8f8f8 !important;
+  border: 1px solid #cbcbcb !important;
+  color: #cbcbcb !important;
+}
+.sudden-disorder-popup .tab-sudden-list li.read .ui.button.basic.secondary.c-gray-type3:hover {
+  background: #f8f8f8 !important;
 }
 .sudden-disorder-popup .tab-sudden-list li .btn-bind {
   font-size: 0;
@@ -3782,27 +3830,6 @@ body ::-webkit-scrollbar-track {
 }
 .tab-disorder .tab-sudden-list li:not(.read):hover .ui.button.basic.secondary.c-gray-type3 {
   background: #ebebeb !important;
-}
-.tab-disorder .tab-sudden-list li.read {
-  border-color: #f8f8f8;
-  background: #f8f8f8;
-}
-.tab-disorder .tab-sudden-list li.read .txt span,
-.tab-disorder .tab-sudden-list li.read .txt em {
-  color: #cbcbcb;
-}
-.tab-disorder .tab-sudden-list li.read .txt .txt-badge.c-peach {
-  background: #f8f8f8;
-  border: 1px solid #cbcbcb;
-  color: #cbcbcb;
-}
-.tab-disorder .tab-sudden-list li.read .ui.button.basic.secondary.c-gray-type3 {
-  background: #f8f8f8 !important;
-  border: 1px solid #cbcbcb !important;
-  color: #cbcbcb !important;
-}
-.tab-disorder .tab-sudden-list li.read .ui.button.basic.secondary.c-gray-type3:hover {
-  background: #f8f8f8 !important;
 }
 .tab-disorder .tab-sudden-list li .txt-badge {
   max-width: 14.3rem;
@@ -5114,9 +5141,12 @@ body ::-webkit-scrollbar-track {
   border-top: 1.2rem solid #d9d9d9;
 }
 .search-view-body .result-list {
-  height: 100%;
+  height: calc(100vh - 266px);
   overflow-y: auto;
   padding: 2.3rem 2.4rem;
+}
+.search-view-body .result-list::-webkit-scrollbar {
+  width: 0.4rem;
 }
 .search-view-body .result-list li {
   display: -webkit-box;
@@ -6123,6 +6153,8 @@ body ::-webkit-scrollbar-track {
 }
 .dashboard-status-content1 .item .state-chart {
   width: 12.5rem;
+  border-left: 1px solid #e8e8e8;
+  border-bottom: 1px solid #e8e8e8;
 }
 .dashboard-status-content2 {
   display: -webkit-box;
