--- a/base/css/is.css
+++ b/base/css/is.css
@@ -39,6 +39,7 @@
 .main-stats-container .summary-info-wrap > .tit {
   display: block;
   margin-bottom: 1.1rem;
+  padding-left: 0.5rem;
   font-size: 2rem;
   color: #1e5f8d;
   font-weight: 500;
@@ -80,6 +81,7 @@
       align-content: center;
   gap: 0 0.6rem;
   width: 15rem;
+  padding: 0 2rem 0 2.6rem;
   line-height: 100%;
   font-size: 2rem;
   color: #fff;
@@ -90,6 +92,9 @@
           box-shadow: 2px 2px 8px 0px rgba(0, 0, 0, 0.05);
 }
 .main-stats-container .summary-info-display > .tit::before {
+  -webkit-box-flex: 0;
+      -ms-flex: 0 0 5%;
+          flex: 0 0 5%;
   content: "";
   display: block;
   width: 0.5rem;
@@ -177,10 +182,11 @@
   font-weight: 700;
 }
 .main-stats-container .summary-info-item-wrap > li .tbl-bind {
-  padding: 1.84rem 1rem 0 1rem;
+  padding: 1.84rem 0.3rem 0 1rem;
 }
 .main-stats-container .summary-info-item-wrap > li .tbl-bind table {
   height: 12.7rem;
+  line-height: normal;
 }
 .main-stats-container .summary-info-item-wrap > li .tbl-bind table th {
   font-size: 1.6rem;
@@ -197,6 +203,26 @@
 .main-stats-container .summary-info-item-wrap > li:last-child .tbl-bind table {
   width: 11.5rem;
   height: 9rem;
+}
+.main-stats-container .summary-info-item-wrap > li.traffic-direction {
+  -webkit-box-flex: 0;
+      -ms-flex: 0 0 32.5rem;
+          flex: 0 0 32.5rem;
+}
+.main-stats-container .summary-info-item-wrap > li.traffic-direction th span {
+  display: block;
+  width: 13.1rem;
+  letter-spacing: -0.068rem;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  word-wrap: normal;
+}
+.main-stats-container .summary-info-item-wrap > li.traffic-direction td span {
+  display: inline-block;
+  width: 3.9rem;
+  margin-right: 1rem;
+  text-align: center;
 }
 .main-stats-container .summary-info-chart {
   display: -webkit-box;
@@ -327,7 +353,7 @@
           justify-content: flex-start;
   margin-bottom: 4.1rem;
 }
-.stats-container .filter-grouop .date-group + .btn-data-search:not(:last-child) {
+.stats-container .filter-grouop .btn-data-search:nth-last-child(2) {
   min-width: 13.1rem;
 }
 .stats-container .filter-grouop .branch-result {
@@ -568,6 +594,7 @@
   border-top: 0;
 }
 .crossroads-flow-board .flow-stats-detail.reverse {
+  border-top: 1px solid #999999;
   border-bottom: 0;
 }
 .crossroads-flow-board .flow-stats-detail.reverse .arrow .flow-straight.strt::before {
@@ -597,7 +624,6 @@
 }
 .crossroads-flow-board .flow-stats-detail.reverse .road-name {
   padding: 1.7rem 0 0;
-  border-top: 1px solid #999999;
 }
 .crossroads-flow-board .flow-stats-detail .road-name {
   display: block;
@@ -1001,9 +1027,14 @@
           align-items: center;
   -ms-flex-line-pack: center;
       align-content: center;
-  padding: 1.35rem 3.8rem 1.35rem 3rem;
+  padding: 1.25rem 3.8rem 1.25rem 3rem;
   border-bottom: 1px solid #e8e8e8;
   text-align: left;
+  -webkit-transition: background 0.2s;
+  transition: background 0.2s;
+}
+.real-time-outbreak-item .btn-item.active {
+  background: #f8f8f8;
 }
 .real-time-outbreak-item .data-list li + li {
   margin-top: 0.3rem;
@@ -1038,6 +1069,10 @@
 .real-time-outbreak-item .outbreak-type.walker {
   color: #786b9b;
   background: #edeaf9;
+}
+.real-time-outbreak-item .outbreak-type.other {
+  color: #999999;
+  background: #e8e8e8;
 }
 .real-time-outbreak-view {
   -webkit-box-flex: 1;
@@ -1273,15 +1308,29 @@
   font-size: 1.6rem;
   line-height: 1.9rem;
 }
+.real-time-outbreak-view .outbreak-video-picture .default-state {
+  display: block;
+  width: 100%;
+  height: 44.3rem;
+  border-radius: 0.5rem;
+}
 .real-time-outbreak-view .outbreak-video-picture .unexpected-scene {
   -webkit-box-flex: 1;
       -ms-flex: 1;
           flex: 1;
 }
+.real-time-outbreak-view .outbreak-video-picture .unexpected-scene .default-state {
+  background: url(/base/images/icon_picture_lg.png) no-repeat 50% 50% #e8e8e8;
+  background-size: 7.36rem 5rem;
+}
 .real-time-outbreak-view .outbreak-video-picture .scene-cctv {
   -webkit-box-flex: 1;
       -ms-flex: 1;
           flex: 1;
+}
+.real-time-outbreak-view .outbreak-video-picture .scene-cctv .default-state {
+  background: url(/base/images/icon_play_lg.png) no-repeat 50% 50% #e8e8e8;
+  background-size: 6.2rem 6.2rem;
 }
 
 /* 돌발 발생 이력 */
@@ -1707,6 +1756,11 @@
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
 }
+.split-screen-container.type2 .split-screen {
+  -webkit-box-flex: 1;
+      -ms-flex: 1 1 33.33%;
+          flex: 1 1 33.33%;
+}
 
 /* ROI설정 탭 화면 */
 .roi-view-container {
@@ -1974,70 +2028,70 @@
 .roi-view-container .color-red {
   background: #d70000;
 }
-.roi-view-container .color-red:hover {
+.roi-view-container .color-red.active, .roi-view-container .color-red:hover {
   -webkit-box-shadow: 0px 0px 2px 2px #8b0000 inset;
           box-shadow: 0px 0px 2px 2px #8b0000 inset;
 }
 .roi-view-container .color-orange {
   background: #ff8a00;
 }
-.roi-view-container .color-orange:hover {
+.roi-view-container .color-orange.active, .roi-view-container .color-orange:hover {
   -webkit-box-shadow: 0px 0px 2px 2px #945000 inset;
           box-shadow: 0px 0px 2px 2px #945000 inset;
 }
 .roi-view-container .color-yellow {
   background: #ffe500;
 }
-.roi-view-container .color-yellow:hover {
+.roi-view-container .color-yellow.active, .roi-view-container .color-yellow:hover {
   -webkit-box-shadow: 0px 0px 2px 2px #b19f00 inset;
           box-shadow: 0px 0px 2px 2px #b19f00 inset;
 }
 .roi-view-container .color-lime {
   background: #a3ef00;
 }
-.roi-view-container .color-lime:hover {
+.roi-view-container .color-lime.active, .roi-view-container .color-lime:hover {
   -webkit-box-shadow: 0px 0px 2px 2px #6a9c00 inset;
           box-shadow: 0px 0px 2px 2px #6a9c00 inset;
 }
 .roi-view-container .color-aqua {
   background: #00efe1;
 }
-.roi-view-container .color-aqua:hover {
+.roi-view-container .color-aqua.active, .roi-view-container .color-aqua:hover {
   -webkit-box-shadow: 0px 0px 2px 2px #00a99f inset;
           box-shadow: 0px 0px 2px 2px #00a99f inset;
 }
 .roi-view-container .color-azure {
   background: #008bef;
 }
-.roi-view-container .color-azure:hover {
+.roi-view-container .color-azure.active, .roi-view-container .color-azure:hover {
   -webkit-box-shadow: 0px 0px 2px 2px #0063aa inset;
           box-shadow: 0px 0px 2px 2px #0063aa inset;
 }
 .roi-view-container .color-violet {
   background: #8f00ff;
 }
-.roi-view-container .color-violet:hover {
+.roi-view-container .color-violet.active, .roi-view-container .color-violet:hover {
   -webkit-box-shadow: 0px 0px 2px 2px #59009e inset;
           box-shadow: 0px 0px 2px 2px #59009e inset;
 }
 .roi-view-container .color-pink {
   background: #ff00f5;
 }
-.roi-view-container .color-pink:hover {
+.roi-view-container .color-pink.active, .roi-view-container .color-pink:hover {
   -webkit-box-shadow: 0px 0px 2px 2px #a6009f inset;
           box-shadow: 0px 0px 2px 2px #a6009f inset;
 }
 .roi-view-container .color-brown {
   background: #965b24;
 }
-.roi-view-container .color-brown:hover {
+.roi-view-container .color-brown.active, .roi-view-container .color-brown:hover {
   -webkit-box-shadow: 0px 0px 2px 2px #683200 inset;
           box-shadow: 0px 0px 2px 2px #683200 inset;
 }
 .roi-view-container .color-green {
   background: #00883f;
 }
-.roi-view-container .color-green:hover {
+.roi-view-container .color-green.active, .roi-view-container .color-green:hover {
   -webkit-box-shadow: 0px 0px 2px 2px #00632d inset;
           box-shadow: 0px 0px 2px 2px #00632d inset;
 }
@@ -2239,16 +2293,14 @@
 }
 
 /* 교차로 ROI 탭 */
+.tab-crossroad-roi .perceive-body > .ui.tab.segment {
+  margin-top: 1.5rem;
+}
 .tab-crossroad-roi .roi-set-list-section .data-tbl-gray {
   height: 23.1rem;
 }
 .tab-crossroad-roi .roi-set-list-section .data-tbl-gray .writing-reduce {
   max-width: 9rem;
-}
-
-[data-tab=road-direction1] table:first-child,
-[data-tab=road-direction2] table:first-child {
-  margin-top: 1.5rem;
 }
 
 /* 속도 ROI 탭 */
